# iabet

./: .env.example  .env.prod.example  .gitignore  README.md  compose.prod.yml  docker-compose.yml  gerar_relatorio.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_player_match_stats.py  0003_ml_history.py  0004_ml_model_runs.py  0005_ml_shadow_predictions.py  0006_invitations.py
backend/app/: main.py  reset_password.py  seed.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  matches.py  ml.py  reports.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/models/: __init__.py  base.py  entities.py  ml_entities.py
backend/app/providers/: api_futebol.py  api_sports.py  base.py  bzzoiro.py  cartola.py  football_data.py  odds_api.py  registry.py
backend/app/repositories/: matches.py
backend/app/schemas/: auth.py  matches.py
backend/app/services/: ml_dashboard.py  ml_features.py  ml_history.py  ml_shadow.py  ml_training.py  models.py  report.py  stat_markets.py  stat_rates.py  strengths.py  sync.py  team_metrics.py  value.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_auth_guard.py  test_cartola.py  test_config.py  test_health.py  test_ml_features.py  test_ml_history.py  test_models.py  test_normalize.py  test_stat_markets.py  test_strengths.py  test_team_metrics.py  test_value.py
deploy/: nginx.conf
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+28 files in other folders)
