[project]
name = "iabet-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
 "fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy[asyncio]>=2.0",
 "asyncpg>=0.29", "alembic>=1.13", "pydantic-settings>=2.4", "email-validator>=2.2",
 "pyjwt>=2.9", "pwdlib[argon2]>=0.2", "python-multipart>=0.0.9",
 "httpx>=0.27", "redis>=5.0", "celery[redis]>=5.4", "reportlab>=4.2",
 "numpy>=2.0", "scipy>=1.14", "scikit-learn>=1.5"
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11", "httpx>=0.27"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
[tool.ruff]
line-length = 100

